[gd_scene load_steps=2 format=3 uid="uid://mqacajjw3blo"]

[ext_resource type="Script" uid="uid://by2qvmbrvnsux" path="res://scenes/UI_files/three_choice_window.gd" id="1_q8ft3"]

[node name="Three_Choice_Window" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 36.0
offset_right = 500.0
offset_bottom = 236.0
script = ExtResource("1_q8ft3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="Choice1" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Choice1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Choice1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Choice2" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Choice2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Choice2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Choice3" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Choice3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Choice3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Choice2" to="." method="_on_choice_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Choice3" to="." method="_on_choice_3_pressed"]
